example-manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    uroperator.brennerm.github.io/monitor.type: HTTPS
    uroperator.brennerm.github.io/monitor.interval: "600"
    uroperator.brennerm.github.io/monitor.httpUsername: foo
    uroperator.brennerm.github.io/monitor.httpPassword: s3cr3t
    uroperator.brennerm.github.io/monitor.httpAuthType: BASIC_AUTH
spec:
  rules:
  - host: brennerm.github.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service1
            port:
              number: 80
